--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,8 @@ dependencies:
      - sudo apt-get update; sudo apt-get install gcc python-setuptools
      - sudo pip install -U crcmod
    post:
-     - ./gradlew :app:assembleDebug -PdisablePreDex
-     - ./gradlew :app:assembleDebugTest -PdisablePreDex
+     - sudo ./gradlew :app:assembleDebug -PdisablePreDex
+     - sudo ./gradlew :app:assembleDebugTest -PdisablePreDex
      - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
      - sudo /opt/google-cloud-sdk/bin/gcloud config set project circle-ctl-test
      - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update
