--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,9 @@ dependencies:
    pre:
      - sudo apt-get update; sudo apt-get install gcc python-setuptools
      - sudo pip install -U crcmod
+   override:
+     - chmod +x gradlew
    post:
-     - chmod +x ./gradlew
      - sudo ./gradlew :app:assembleDebug -PdisablePreDex
      - sudo ./gradlew :app:assembleDebugTest -PdisablePreDex
      - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
