--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,6 @@
 dependencies:
    pre:
+     - echo y | android update sdk --force --no-ui
      - sudo apt-get update; sudo apt-get install gcc python-setuptools
      - sudo pip install -U crcmod
    override:
