--- a/circle.yml
+++ b/circle.yml
@@ -1,23 +1,30 @@
-dependencies:
-   pre:
-     - echo y | android update sdk --force --no-ui
-     - sudo apt-get update; sudo apt-get install gcc python-setuptools
-     - sudo pip install -U crcmod
-   override:
-     - echo y | android update sdk --no-ui --all --filter build-tools-26.0.2,android-26
-     - chmod +x gradlew
-     - sudo ./gradlew dependencies
-
-   post:
-     - sudo ./gradlew :app:assembleDebug -PdisablePreDex
-     - sudo ./gradlew :app:assembleDebugTest -PdisablePreDex
-     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
-     - sudo /opt/google-cloud-sdk/bin/gcloud config set project circle-ctl-test
-     - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update
-     - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components install beta
-     - sudo /opt/google-cloud-sdk/bin/gcloud auth activate-service-account --key-file ${HOME}/client-secret.json
-test:
-   override:
-     - echo "y" | sudo /opt/google-cloud-sdk/bin/gcloud beta test android run --app app/build/outputs/apk/app-debug.apk --test app/build/outputs/apk/app-debug-test-unaligned.apk --results-bucket cloud-test-circle-ctl-test
-   post:
-     - sudo /opt/google-cloud-sdk/bin/gsutil -m cp -r `sudo /opt/google-cloud-sdk/bin/gsutil ls gs://cloud-test-circle-ctl-test | tail -1` $CIRCLE_ARTIFACTS/
+version: 2
+jobs:
+  build:
+    working_directory: ~/code
+    docker:
+      - image: circleci/android:api-26
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+         command: sudo chmod +x ./gradlew
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
